// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Westend Asset Hub Staking > cancel deferred slash with bad origin > cancel deferred slash events with bad origin 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 620000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Staking > chill other > chill other bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Staking > force apply validator commission > force apply min commission events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 650000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Staking > modify validator count > set validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 580000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Staking > set invulnerables with bad origin > set invulnerables events with bad signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 580000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Staking > set minimum validator commission > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 570000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Staking > set staking configs > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1200000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Staking > staking lifecycle > nominate events 1`] = `[]`;

exports[`Westend Asset Hub Staking > staking lifecycle > nominator bond events 1`] = `[]`;

exports[`Westend Asset Hub Staking > staking lifecycle > nominator bond extra events 1`] = `[]`;

exports[`Westend Asset Hub Staking > staking lifecycle > validator 0 bond events 1`] = `[]`;

exports[`Westend Asset Hub Staking > staking lifecycle > validator 0 validate events 1`] = `[]`;

exports[`Westend Asset Hub Staking > staking lifecycle > validator 1 bond events 1`] = `[]`;

exports[`Westend Asset Hub Staking > staking lifecycle > validator 1 validate events 1`] = `[]`;

exports[`Westend Asset Hub Staking > staking lifecycle > validator 2 bond events 1`] = `[]`;

exports[`Westend Asset Hub Staking > staking lifecycle > validator 2 validate events 1`] = `[]`;

exports[`Westend Asset Hub Staking > test fast unstake > nominate events 1`] = `[]`;

exports[`Westend Asset Hub Staking > test fast unstake > nominator bond events 1`] = `[]`;

exports[`Westend Asset Hub Staking > trying to become a validator with no bonded funds fails > events when attempting to validate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1300000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Staking > trying to nominate with no bonded funds fails > events when attempting to nominate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 0,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;
